Radius Remote Configuration Interface

--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -158,13 +158,16 @@ table.sources {
               [% list_entry('Config::PKI_Provider', 'index', 'PKI Providers') | none %]
               [%- END %]
               [%- END %]
-              [%- IF can_access_any("REALM_READ", "DOMAIN_READ") %]
+              [%- IF can_access_any("REALM_READ", "DOMAIN_READ", "RADIUSREMOTE_READ") %]
               <li class="nav-header">[% l('RADIUS') %]</li>
               [%- IF can_access("REALM_READ") %]
               [% list_entry( 'Config::Realm', 'index', 'Realms') | none %]
               [%- END %]
               [%- IF can_access("DOMAIN_READ") %]
               [% list_entry( 'Config::Domain', 'index', 'Domains') | none %]
+              [%- END %]
+              [%- IF can_access("RADIUSREMOTE_READ") %]
+              [% list_entry( 'Config::RadiusRemote', 'index', 'Radius Remote') | none %]
               [%- END %]
               [%- END %]
               [%- IF can_access_any("VIOLATIONS_READ","SOH_READ","SCAN_READ","WMI_READ") %]
