--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -85,81 +85,50 @@ table.sources {
               [%- IF can_access_any("CONFIGURATION_MAIN_READ","CONNECTION_PROFILES_READ","PORTAL_MODULE_READ","ADMIN_ROLES_READ", "FILTERS_READ") -%]
               <li class="nav-header">[% l('Policies') %]</li>
               [% pf_section_entry( 'define_policy', 'Getting Started') | none %]
-              [% list_entry( 'Config::Roles', 'index', 'Roles') | none %]
+              [%- IF can_access("USERS_ROLES_READ") %]
+              [% pf_section_entry( 'roles', 'Devices') | none %]
+              [%- END %]
+              [%- IF can_access("USERS_SOURCES_READ") %]
               [% list_entry( 'Config::Authentication', 'index', 'Sources') | none %]
+              [%- END %]
+              [%- IF can_access("SWITCHES_READ") %]
               [% list_entry( 'Config::Switch', 'index', 'Switches') | none %]
+              [%- END %]
+              [%- IF can_access("DOMAIN_READ") %]
               [% list_entry( 'Config::Domain', 'index', 'Domains') | none %]
-              [% list_entry( 'Config::Profile', 'index', 'Portal Profiles') | none %]
-              [% list_entry( 'Config::Filters', 'index', 'Filter Engine') | none %]
-              <li class="nav-header">[% l('Main') %]</li>
               [%- END %]
-              [%- IF can_access("CONFIGURATION_MAIN_READ") %]
-              [% pf_section_entry( 'general', 'General') | none %]
-              [% pf_section_entry( 'database', 'Database') | none %]
-              [% pf_section_entry( 'network', 'Network') | none %]
-              [% pf_section_entry( 'trapping', 'Trapping') | none %]
-              [% pf_section_entry( 'parking', 'Parking') | none %]
-              [% pf_section_entry( 'registration', 'Registration') | none %]
-              [% pf_section_entry( 'alerting', 'Alerting') | none %]
-              [%- IF can_access("PFMON_READ") %]
-              [% list_entry('Config::Pfmon', 'index', 'Maintenance Tasks') | none %]
+              [%- IF can_access("REALM_READ") %]
+              [% list_entry( 'Config::Realm', 'index', 'Realms') | none %]
               [%- END %]
-              [% pf_section_entry( 'services', 'Services') | none %]
-              [% pf_section_entry( 'vlan', 'SNMP') | none %]
-              [% pf_section_entry( 'inline', 'Inline') | none %]
-              [% pf_section_entry( 'servicewatch', 'Service watch') | none %]
-              [% pf_section_entry( 'captive_portal', 'Captive portal') | none %]
-              [% pf_section_entry( 'advanced', 'Advanced') | none %]
-              [% pf_section_entry( 'omapi', 'OMAPI') | none %]
-              [% pf_section_entry( 'webservices', 'Web Services') | none %]
-              [% pf_section_entry( 'monitoring', 'Monitoring') | none %]
-              [% pf_section_entry( 'active_active', 'Clustering') | none %]
-              [% pf_section_entry( 'metadefender', 'Metadefender') | none %]
-              [%- END %]
-              [% IF can_access("MSE_READ") %]
-              [% pf_section_entry( 'mse_tab', 'Node MSE Tab') | none %]
+              [%- IF can_access("PORTAL_PROFILES_READ") %]
+              [% list_entry( 'Config::Profile', 'index', 'Connection Profiles') | none %]
               [%- END %]
               [%- IF can_access("PORTAL_MODULE_READ") %]
               [% list_entry('Config::PortalModule', 'index', 'Portal Modules') | none %]
               [%- END %]
-              [%- IF can_access("CONNECTION_PROFILES_READ") %]
-              [% list_entry('Config::Profile', 'index', 'Connection Profiles') | none %]
+              <li class="nav-header">[% l('System Configuration') %]</li>
+              [%- IF can_access("CONFIGURATION_MAIN_READ") %]
+              [% pf_section_entry('general', 'General') | none %]
+              [% pf_section_entry( 'alerting', 'Alerting') | none %]
+              [%- IF can_access("PFMON_READ") %]
+              [% list_entry('Config::Pfmon', 'index', 'Maintenance Tasks') | none %]
               [%- END %]
+              [% pf_section_entry( 'advanced', 'Advanced') | none %]
+              [% pf_section_entry( 'maintenance', 'Maintenance') | none %]
+              [% pf_section_entry( 'services', 'Services') | none %]
+              [% pf_section_entry( 'inline', 'Inline') | none %]
+              [% pf_section_entry( 'active_active', 'Clustering') | none %]
+              [% pf_section_entry( 'webservices', 'Web Services') | none %]
+              [%- END %]
+              [% pf_section_entry( 'radius_authentication_methods', 'Authentication Methods') | none %]
               [%- IF can_access("ADMIN_ROLES_READ") %]
               [% list_entry('Config::AdminRoles', 'index', 'Admin Access') | none %]
               [%- END %]
+              <li class="nav-header">[% l('Advanced Portal Configuration') %]</li>
               [%- IF can_access("FILTERS_READ") %]
               [% list_entry('Config::Filters', 'index', 'Filter engines') | none %]
               [%- END %]
-              [%- IF can_access_any("INTERFACES_READ","SWITCHES_READ","FLOATING_DEVICES_READ","FIREWALL_SSO_READ") %]
-              <li class="nav-header">[% l('Network') %]<li>
-              [%- IF can_access("INTERFACES_READ") %]
-              [% pf_section_entry( 'interfaces', 'Interfaces and Networks') | none %]
-              [%- END %]
-              [%- IF can_access("SWITCHES_READ") %]
-              [% list_entry('Config::Switch', 'index', 'Switches') | none %]
-              [%- END %]
-              [%- IF can_access("FLOATING_DEVICES_READ") %]
-              [% list_entry('Config::FloatingDevice', 'index', 'Floating Device') | none %]
-              [%- END %]
-              [%- IF can_access("FIREWALL_SSO_READ") %]
-              [% list_entry('Config::Firewall_SSO', 'index', 'Firewall SSO') | none %]
-              [%- END %]
-              [%- END %]
-              [%- IF can_access("WRIX_READ") %]
-              [% list_entry('Config::Wrix', 'index', 'WRIX') | none %]
-              [%- END %]
-              [%- IF can_access_any("USERS_ROLES_READ","USERS_SOURCES_READ", "PROVISIONING_READ", "PKI_PROVIDER_READ", "BILLING_TIER_READ") %]
-              <li class="nav-header">[% l('Users') %]</li>
-              [%- IF can_access("USERS_ROLES_READ") %]
-              [% list_entry('Config::Roles', 'index', 'Roles') | none %]
-              [%- END %]
-              [%- IF can_access("CONFIGURATION_MAIN_READ") %]
-              [% pf_section_entry( 'guests_admin_registration', 'Access Duration') | none %]
-              [%- END %]
-              [%- IF can_access("USERS_SOURCES_READ") %]
-              [% list_entry('Config::Authentication', 'index', 'Sources') | none %]
-              [%- END %]
+              [% pf_section_entry( 'parking', 'Parking') | none %]
               [%- IF can_access("BILLING_TIER_READ") %]
               [% list_entry('Config::BillingTiers', 'index', 'Billing Tiers') | none %]
               [%- END %]
@@ -169,48 +138,67 @@ table.sources {
               [%- IF can_access("PKI_PROVIDER_READ") %]
               [% list_entry('Config::PKI_Provider', 'index', 'PKI Providers') | none %]
               [%- END %]
-              [%- END %]
-              [%- IF can_access_any("REALM_READ", "DOMAIN_READ") %]
-              <li class="nav-header">[% l('RADIUS') %]</li>
-              [% pf_section_entry( 'radius_authentication_methods', 'Authentication Methods') | none %]
-              [%- IF can_access("REALM_READ") %]
-              [% list_entry( 'Config::Realm', 'index', 'Realms') | none %]
-              [%- END %]
-              [%- IF can_access("DOMAIN_READ") %]
-              [% list_entry( 'Config::Domain', 'index', 'Domains') | none %]
-              [%- END %]
-              [%- END %]
-              [%- IF can_access_any("VIOLATIONS_READ","SOH_READ","SCAN_READ","WMI_READ") %]
+              [% pf_section_entry( 'captive_portal', 'Captive portal') | none %]
+              [% pf_section_entry( 'registration', 'Registration') | none %]
               <li class="nav-header">[% l('Compliance') %]</li>
+              [%- IF can_access("VIOLATIONS_READ") %]
+              [% list_entry('Violation', 'index', 'Violations') | none %]
+              [%- END %]
+              [%- IF can_access("FIREWALL_SSO_READ") %]
+              [% list_entry('Config::Firewall_SSO', 'index', 'Firewall SSO') | none %]
+              [%- END %]
               [%- IF can_access("SCAN_READ") %]
               [% list_entry('Config::Scan', 'index', 'Scan Engines') | none %]
-              [%- END %]
-              [%- IF can_access("PFDETECT_READ") %]
-              [% list_entry('Config::Pfdetect', 'index', 'Syslog Parsers') | none %]
               [%- END %]
               [%- IF can_access("WMI_READ") %]
               [% list_entry('Config::WMI', 'index', 'WMI Rules') | none %]
               [%- END %]
-              [%- IF can_access("VIOLATIONS_READ") %]
-              [% list_entry('Violation', 'index', 'Violations') | none %]
-              [%- END %]
-              [%- IF can_access("SOH_READ") %]
-              [% pf_section_entry( 'soh', 'Statement of Health') | none %]
-              [%- END %]
+              [% pf_section_entry( 'metadefender', 'Metadefender') | none %]
+              [%- IF can_access("PFDETECT_READ") %]
+              [% list_entry('Config::Pfdetect', 'index', 'Syslog Parsers') | none %]
               [%- END %]
               [%- IF can_access("FINGERBANK_READ") %]
-              <li class="nav-header">[% l('Fingerbank') %]</li>
               [% list_entry('Config::Fingerbank::Settings', 'index', 'Settings') | none %]
-              [% list_entry('Config::Fingerbank::Combination', 'index', 'Combinations') | none %]
+              <!--[% list_entry('Config::Fingerbank::Combination', 'index', 'Combinations') | none %]
               [% list_entry('Config::Fingerbank::Device', 'index', 'Devices') | none %]
               [% list_entry('Config::Fingerbank::DHCP_Fingerprint', 'index', 'DHCP Fingerprints') | none %]
               [% list_entry('Config::Fingerbank::DHCP_Vendor', 'index', 'DHCP Vendors') | none %]
               [% list_entry('Config::Fingerbank::DHCP6_Fingerprint', 'index', 'DHCPv6 Fingerprints') | none %]
               [% list_entry('Config::Fingerbank::DHCP6_Enterprise', 'index', 'DHCPv6 Enterprises') | none %]
               [% list_entry('Config::Fingerbank::MAC_Vendor', 'index', 'MAC Vendors') | none %]
-              [% list_entry('Config::Fingerbank::User_Agent', 'index', 'User Agents') | none %]
+              [% list_entry('Config::Fingerbank::User_Agent', 'index', 'User Agents') | none %]-->
               [%- END %]
-            </ul>
+              <li class="nav-header">[% l('Advanced') %]</li>
+              [% IF can_access("MSE_READ") %]
+              [% pf_section_entry( 'mse_tab', 'Node MSE Tab') | none %]
+              [%- END %]
+              [% pf_section_entry( 'network', 'Network') | none %]
+              <!--[% pf_section_entry( 'trapping', 'Trapping') | none %]
+              [%- IF can_access("INTERFACES_READ") %]
+              [% pf_section_entry( 'interfaces', 'Interfaces and Networks') | none %]
+              [%- END %]-->
+              [% pf_section_entry( 'monitoring', 'Monitoring') | none %]
+              [% pf_section_entry( 'omapi', 'OMAPI') | none %]
+              [% pf_section_entry( 'vlan', 'SNMP') | none %]
+              [%- IF can_access("FLOATING_DEVICES_READ") %]
+              [% list_entry('Config::FloatingDevice', 'index', 'Floating Device') | none %]
+              [%- END %]
+              <li class="nav-header">[% l('Main') %]</li>
+              [%- END %]
+              [%- IF can_access("CONFIGURATION_MAIN_READ") %]
+              [%- END %]
+              [%- IF can_access_any("INTERFACES_READ","SWITCHES_READ","FLOATING_DEVICES_READ","FIREWALL_SSO_READ") %]
+              <li class="nav-header">[% l('Network') %]<li>
+              [%- END %]
+              [%- IF can_access_any("USERS_ROLES_READ","USERS_SOURCES_READ", "PROVISIONING_READ", "PKI_PROVIDER_READ", "BILLING_TIER_READ") %]
+              <li class="nav-header">[% l('Users') %]</li>
+              [%- END %]
+              [%- IF can_access_any("REALM_READ", "DOMAIN_READ") %]
+              <li class="nav-header">[% l('RADIUS') %]</li>
+              [%- END %]
+              [%- IF can_access_any("VIOLATIONS_READ","SOH_READ","SCAN_READ","WMI_READ") %]
+              <li class="nav-header">[% l('Compliance') %]</li>
+              [%- END %]
           </div><!--/.well -->
         </div><!--/span-->
         <div class="loader"><p><img src="[% c.uri_for('/static/app/loader-48.gif') %]"></p></div>
