--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -130,7 +130,6 @@ table.sources {
               [%- IF can_access("FILTERS_READ") %]
               [% list_entry('Config::Filters', 'index', 'Filter engines') | none %]
               [%- END %]
-              [% pf_section_entry( 'parking', 'Parking') | none %]
               [%- IF can_access("BILLING_TIER_READ") %]
               [% list_entry('Config::BillingTiers', 'index', 'Billing Tiers') | none %]
               [%- END %]
@@ -146,7 +145,7 @@ table.sources {
               [%- IF can_access("CONFIGURATION_MAIN_READ") %]
               [% pf_section_entry( 'guests_admin_registration', 'Access Duration') | none %]
               [%- END %]
-              [% pf_section_entry( 'registration', 'Registration') | none %]
+              [% pf_section_entry( 'device_registration', 'Device Registration') | none %]
               <li class="nav-header">[% pf_section_entry('compliance', 'Compliance') | none %]</li>
               [%- IF can_access("FINGERBANK_READ") %]
               [% pf_section_entry( 'profiling', 'Profiling with Fingerbank') | none %]
@@ -167,9 +166,9 @@ table.sources {
               [%- IF can_access("INTERFACES_READ") %]
               [% pf_section_entry( 'networks', 'Networks') | none %]
               [%- END %]
-              [% pf_section_entry( 'monitoring', 'Monitoring') | none %]
+              [% pf_section_entry( 'graphite', 'Graphite') | none %]
               [% pf_section_entry( 'omapi', 'OMAPI') | none %]
-              [% pf_section_entry( 'vlan', 'SNMP') | none %]
+              [% pf_section_entry( 'snmp_traps', 'SNMP') | none %]
               [%- IF can_access("FLOATING_DEVICES_READ") %]
               [% list_entry('Config::FloatingDevice', 'index', 'Floating Device') | none %]
               [%- END %]
