--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -116,7 +116,7 @@ table.sources {
               [%- IF can_access("PFDETECT_READ") %]
               [% list_entry('Config::Pfdetect', 'index', 'Syslog Parsers') | none %]
               [%- END %]
-              <li class="nav-header">[% pf_section_entry('intergration', 'Integration') | none %]</li>
+              <li class="nav-header">[% pf_section_entry('integration', 'Integration') | none %]</li>
               [%- IF can_access("FIREWALL_SSO_READ") %]
               [% list_entry('Config::Firewall_SSO', 'index', 'Firewall SSO') | none %]
               [%- END %]
